# LLM-News-Summarizer

./: .env.copy  .env.example  .gitignore  EXPLANATION.md  README.md  app.py  main.py  pyproject.toml  requirements.txt  test.py
src/: __init__.py  custom_summarizer.py  detik_scraper.py  groq_summarizer.py  text_processor.py  utils.py
static/: script.js  styles.css
templates/: index.html
