[project]
name = "llm-news-summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "flask>=3.1.0",
    "groq>=0.13.0",
    "nltk==3.8.1",
    "numpy>=2.2.0",
    "python-dotenv==1.0.1",
    "requests>=2.32.3",
]
